# QT

Network_project/: CMakeLists.txt  Main.qml  README.md  main.cpp  networkcontroller.cpp  networkcontroller.h
Weather_app/: CMakeLists.txt  Main.qml  README.md  config.h  main.cpp  weather_base64.txt  weathermanager.cpp  weathermanager.h
calculator/: CMakeLists.txt  README.md  main.cpp
led_control/: CMakeLists.txt  Main.qml  README.md  gpiocontroller.cpp  gpiocontroller.h  main.cpp
